compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_type_alias_parameter_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1391
expression: "type RakunOption<okType>= Result<okType, Nil>"
---
----- SOURCE CODE
type RakunOption<okType>= Result<okType, Nil>

----- ERROR
error: Invalid type variable name
  ┌─ /src/one/two.rakun:1:18
  │
1 │ type RakunOption<okType>= Result<okType, Nil>
  │                  ^^^^^^ This is not a valid type variable name

Hint: Type Variable names start with a lowercase letter and contain a-z, 0-
9, or _.
Try: ok_type
